--- a/packages/app-one/package.json
+++ b/packages/app-one/package.json
@@ -13,6 +13,7 @@
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "todo-lib": "^0.1.0"
   }
 }
