--- a/packages/app-two/package.json
+++ b/packages/app-two/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^3.1.1",
     "next": "10.0.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "todo-lib": "^0.1.0"
   }
 }
